Refs #8773; Fixed the following:  - Fixed display of zoom scroller by setting the table display to  table  - Wrapped code that displayed the scalebar in a ready state fixing it's display

--- a/eea/geotags/skins/eea_geotags/eea.geotags.css
+++ b/eea/geotags/skins/eea_geotags/eea.geotags.css
@@ -383,6 +383,10 @@
           box-shadow: 2px 2px 4px #ADADAD;
 }
 
+#eeaEsriMap table{
+    display: table;
+}
+
 .eea-location-listing {
   text-align: right;
   color: #666;
